--- a/BarberShop/Views/Shared/_AdminLayout.cshtml
+++ b/BarberShop/Views/Shared/_AdminLayout.cshtml
@@ -51,6 +51,10 @@
                     <i class="fas fa-calendar-alt mr-2"></i> Agendamentos
                 </a>
                 <hr class="sidebar-divider">
+                <a href="@Url.Action("Index", "Barbearia")" class="list-group-item list-group-item-action bg-dark text-white">
+                    <i class="fas fa-info-circle mr-2"></i> Meus Dados
+                </a>
+                <hr class="sidebar-divider">
                 <a href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();" class="list-group-item list-group-item-action bg-dark text-white">
                     <i class="fas fa-sign-out-alt mr-2"></i> Logout
                 </a>
@@ -60,7 +64,6 @@
                     @Html.AntiForgeryToken()
                 </form>
             </div>
-
         </div>
 
         <div id="toastContainer" style="position: fixed; top: 20px; right: 20px; z-index: 9999;"></div>
