--- a/BarberShop/wwwroot/css/site.css
+++ b/BarberShop/wwwroot/css/site.css
@@ -1110,7 +1110,78 @@ body {
 }
 
 
+/* Container principal */
+.barbearia-dados-container {
+    background-color: #2b2b2b;
+    color: #ecf0f1;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
 
+/* Imagem da barbearia */
+.barbearia-logo-img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border: 3px solid #e74c3c;
+}
+
+/* Ícone de upload sobre a imagem */
+.upload-icon {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: #e74c3c;
+    color: #fff;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+
+/* Cards de informações */
+.info-card {
+    background-color: #34495e;
+    color: #ecf0f1;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+    .info-card h5 {
+        color: #e74c3c;
+        font-weight: bold;
+    }
+
+/* Botão Salvar */
+.btn-primary {
+    background-color: #3498db;
+    border-color: #3498db;
+}
+
+    .btn-primary:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
+
+
+.progress-container-horizontal {
+    width: 100%;
+    height: 8px;
+    background-color: #e9ecef;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.progress-bar-horizontal {
+    width: 0%;
+    height: 100%;
+    transition: width 0.3s ease;
+    border-radius: 5px;
+}
 
 
 
@@ -1161,6 +1232,15 @@ body {
         .servico-card .actions .btn {
             font-size: 0.9rem;
         }
+
+    .barbearia-logo-img {
+        width: 120px;
+        height: 120px;
+    }
+
+    .info-card {
+        font-size: 0.9rem;
+    }
 }
 
 /* Responsivo para Desktops */
